<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="pref_key_location" translatable="false">location</string>
    <string name="pref_key_temperature_unit" translatable="false">temperatureUnit</string>
    <string name="pref_default_location" translatable="false">94043</string>
    <string name="pref_default_temperature_unit" translatable="false">@string/temperature_unit_value_metric</string>
    <string name="temperature_unit_value_metric" translatable="false">metric</string>
    <string name="temperature_unit_value_imperial" translatable="false">imperial</string>

    <string name="app_name">Sunshine</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_category_title_general">General Preferences</string>
    <string name="pref_label_location">Location</string>
    <string name="pref_label_temperature_units">Temperature Units</string>
    <string name="temperature_unit_label_metric">Metric</string>
    <string name="temperature_unit_label_imperial">Imperial</string>
    <string name="map_location">Map Location</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>


    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>
    <!-- Temperature formats in degrees [CHAR LIMIT=NONE] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
    Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.luizguilherme.com</string>
    <string name="content_authority">com.luizguilherme.sunshine</string>

    <!-- Notification Format -->
    <string name="format_notification">
    Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>


</resources>
